fix img relative path, plan scroll table

--- a/MusicSchool/_static/src/plan.html
+++ b/MusicSchool/_static/src/plan.html
@@ -97,7 +97,7 @@
             <table>
                 <thead>
                     <tr>
-                        <th class="plan__th-sticky"></th>
+                        <th></th>
                         <th></th>
                         <th rowspan="2" class="plan__th-red"><span>おすすめ</span>スタンダード<br class="no-pc">プラン</th>
                         <th></th>
@@ -110,13 +110,13 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th class="plan__th u-font--bold plan__th-sticky">月額料金</th>
+                        <th class="plan__th u-font--bold">月額料金</th>
                         <td class="plan__td--strong u-font--bold">39,000円</td>
                         <td class="plan__td--strong u-font--bold u-font--red">59,000円</td>
                         <td class="plan__td--strong u-font--bold">128,000円</td>
                     </tr>
                     <tr>
-                        <th class="plan__th plan__th-sticky">マンツーマン授業</th>
+                        <th class="plan__th">マンツーマン授業</th>
                         <td>
                             <img src="./img/icon/table-circle-black.svg" alt="circle-black">
                             <p class="plan__td__text">週１回</p>
@@ -131,7 +131,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th class="plan__th plan__th-sticky">ビジネス基本講座</th>
+                        <th class="plan__th">ビジネス基本講座</th>
                         <td>
                             <img src="./img/icon/table-circle-black.svg" alt="circle-black">
                         </td>
@@ -143,7 +143,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th class="plan__th plan__th-sticky">練習ROOM利用</th>
+                        <th class="plan__th">練習ROOM利用</th>
                         <td>
                             <img src="./img/icon/table-circle-black.svg" alt="circle-black">
                             <p class="plan__td__text">月10時間</p>
@@ -158,7 +158,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th class="plan__th plan__th-sticky">ビジネスコンサル</th>
+                        <th class="plan__th">ビジネスコンサル</th>
                         <td>
                             <img src="./img/icon/table-hyphen.svg" alt="hyphen" class="plan__td__hyphen">
                         </td>
@@ -172,7 +172,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th class="plan__th plan__th-sticky">コミュニティ<br class="no-pc">参加資格</th>
+                        <th class="plan__th">コミュニティ<br class="no-pc">参加資格</th>
                         <td>
                             <img src="./img/icon/table-hyphen.svg" alt="hyphen" class="plan__td__hyphen">
                         </td>
