fix search button

--- a/MusicSchool/_static/src/blog_details.html
+++ b/MusicSchool/_static/src/blog_details.html
@@ -275,11 +275,12 @@
                     <h2 class="c-section__title">
                         ブログ内を検索
                     </h2>
-                    <form class="blog-detail__search-field">
+                    <div class="blog-detail__search-field">
                         <input type="text" name="blog-detail__search-input" id="blog-detail__search-input"
                             class="blog-detail__search-input">
-                        <input type="image" src="./img/icon/search.svg" alt="search">
-                    </form>
+                        <input type="image" src="./img/icon/search.svg" alt="search"
+                            onclick="location.href='./search.html'">
+                    </div>
                 </section>
                 <!-- おすすめの記事 -->
                 <section id="blog-detail__recommend">
