--- a/MusicSchool/_static/src/index.html
+++ b/MusicSchool/_static/src/index.html
@@ -362,11 +362,11 @@
         <div class="main-wrapper footer-wrapper">
             <nav class="footer__nav">
                 <ul>
-                    <li><a href="./index.html" class="u-font--white u-font--bold footer__nav__item">ホーム</a></li>
-                    <li><a href="./plan.html" class="u-font--white u-font--bold footer__nav__item">料金</a></li>
-                    <li><a href="./blog_list.html" class="u-font--white u-font--bold footer__nav__item">ブログ</a></li>
-                    <li><a href="./notice_list.html" class="u-font--white u-font--bold footer__nav__item">お知らせ</a></li>
-                    <li><a href="./result_list.html" class="u-font--white u-font--bold footer__nav__item">卒業実績</a></li>
+                    <li><a href="./index.html" class="u-font--white u-font--bold footer__nav__itemlink">ホーム</a></li>
+                    <li><a href="./plan.html" class="u-font--white u-font--bold footer__nav__itemlink">料金</a></li>
+                    <li><a href="./blog_list.html" class="u-font--white u-font--bold footer__nav__itemlink">ブログ</a></li>
+                    <li><a href="./notice_list.html" class="u-font--white u-font--bold footer__nav__itemlink">お知らせ</a></li>
+                    <li><a href="./result_list.html" class="u-font--white u-font--bold footer__nav__itemlink">卒業実績</a></li>
                 </ul>
             </nav>
             <img src="./img/icon/footer-logo.svg" alt="footer-logo" class="footer__logo">
