fix link, img mediate layout

--- a/MusicSchool/_static/src/blog_details.html
+++ b/MusicSchool/_static/src/blog_details.html
@@ -65,10 +65,10 @@
         <div class="main-wrapper">
             <ul>
                 <li>
-                    <a href="#">ホーム</a>
+                    <a href="./index.html">ホーム</a>
                 </li>
                 <li>
-                    <a href="#">ブログ</a>
+                    <a href="./blog_list.html">ブログ</a>
                 </li>
                 <li>
                     <a href="#">ギター</a>
@@ -171,7 +171,8 @@
                                     <div class="c-linear-nav__item__label c-linear-nav__prev__label">◀︎ 前の記事</div>
                                     <div class="c-linear-nav__card">
                                         <img class="c-linear-nav__item__img pc" src="./img/PC/blog/blog01.png"
-                                            srcset="./img/PC/blog/blog01.png 1x, ./img/PC/blog/blog01@2x.png 2"></img>
+                                            srcset="./img/PC/blog/blog01.png 1x, ./img/PC/blog/blog01@2x.png 2x"
+                                            alt="前の記事">
                                         <div class="c-linear-nav__item__title">タイトルが入ります。タイトルが入ります。タイトルが入</div>
                                     </div>
                                 </div>
@@ -183,7 +184,8 @@
                                     <div class="c-linear-nav__item__label c-linear-nav__next__label">次の記事 ▶︎</div>
                                     <div class="c-linear-nav__card">
                                         <img class="c-linear-nav__item__img pc" src="./img/PC/blog/blog01.png"
-                                            srcset="./img/PC/blog/blog01.png 1x, ./img/PC/blog/blog01@2x.png 2"></img>
+                                            srcset="./img/PC/blog/blog01.png 1x, ./img/PC/blog/blog01@2x.png 2x"
+                                            alt="次の記事">
                                         <div class="c-linear-nav__item__title">タイトルが入ります。タイトルが入ります。タイトルが入</div>
                                     </div>
                                 </div>
@@ -358,10 +360,13 @@
                 <ul>
                     <li><a href="./index.html" class="u-font--white u-font--bold footer__nav__itemlinklink">ホーム</a></li>
                     <li><a href="./plan.html" class="u-font--white u-font--bold footer__nav__itemlinklink">料金</a></li>
-                    <li><a href="./blog_list.html" class="u-font--white u-font--bold footer__nav__itemlinklink">ブログ</a></li>
-                    <li><a href="./notice_list.html" class="u-font--white u-font--bold footer__nav__itemlinklink">お知らせ</a>
+                    <li><a href="./blog_list.html" class="u-font--white u-font--bold footer__nav__itemlinklink">ブログ</a>
                     </li>
-                    <li><a href="./result_list.html" class="u-font--white u-font--bold footer__nav__itemlinklink">卒業実績</a>
+                    <li><a href="./notice_list.html"
+                            class="u-font--white u-font--bold footer__nav__itemlinklink">お知らせ</a>
+                    </li>
+                    <li><a href="./result_list.html"
+                            class="u-font--white u-font--bold footer__nav__itemlinklink">卒業実績</a>
                     </li>
                 </ul>
             </nav>
