--- a/MusicSchool/_static/src/contact_form.html
+++ b/MusicSchool/_static/src/contact_form.html
@@ -72,15 +72,15 @@
         <div class="main-wrapper">
             <ul>
                 <li>
-                    <a href="#">ホーム</a>
+                    <a href="./index.html">ホーム</a>
                 </li>
                 <li>
-                    <a href="#">お問い合わせ</a>
+                    <a href="./contact_form.html">お問い合わせ</a>
                 </li>
             </ul>
         </div>
     </nav>
-    <section id="contact-form" class="main-wrapper">
+    <div id="contact-form" class="main-wrapper">
         <p class="contact-form__desc">
             当校に関するご質問・ご相談・資料請求は下記のフォームからお気軽にお問い合わせください。<br>通常３営業日以内にメールにてご連絡させていただきます。
         </p>
@@ -92,7 +92,7 @@
             </div>
             <div class="contact-form__field--text">
                 <label for="contact-form__name-txt" class="contact-form__label">お名前</label>
-                <input type="text" id="contact-form__company-txt" class="c-form__input-text contact-form__input"
+                <input type="text" id="contact-form__name-txt" class="c-form__input-text contact-form__input"
                     placeholder="北村　翔平">
             </div>
             <div class="contact-form__field--text">
@@ -147,17 +147,20 @@
                 <img src="./img/icon/to-top.svg" alt="トップへ戻る">
             </button>
         </div>
-    </section>
+    </div>
     <footer id="footer">
         <div class="main-wrapper footer-wrapper">
             <nav class="footer__nav">
                 <ul>
                     <li><a href="./index.html" class="u-font--white u-font--bold footer__nav__itemlinklink">ホーム</a></li>
                     <li><a href="./plan.html" class="u-font--white u-font--bold footer__nav__itemlinklink">料金</a></li>
-                    <li><a href="./blog_list.html" class="u-font--white u-font--bold footer__nav__itemlinklink">ブログ</a></li>
-                    <li><a href="./notice_list.html" class="u-font--white u-font--bold footer__nav__itemlinklink">お知らせ</a>
+                    <li><a href="./blog_list.html" class="u-font--white u-font--bold footer__nav__itemlinklink">ブログ</a>
                     </li>
-                    <li><a href="./result_list.html" class="u-font--white u-font--bold footer__nav__itemlinklink">卒業実績</a>
+                    <li><a href="./notice_list.html"
+                            class="u-font--white u-font--bold footer__nav__itemlinklink">お知らせ</a>
+                    </li>
+                    <li><a href="./result_list.html"
+                            class="u-font--white u-font--bold footer__nav__itemlinklink">卒業実績</a>
                     </li>
                 </ul>
             </nav>
