--- a/MusicSchool/_static/src/index.html
+++ b/MusicSchool/_static/src/index.html
@@ -169,24 +169,40 @@
             <h1 class="c-title u-font--white">生徒さんたちの声</h1>
             <div class="js-slider voice__slider">
                 <div class="voice__item">
-                    <div class="voice01 voice__img"></div>
-                    <h2 class="voice__title u-font--white">証券会社勤務　丸山さん</h2>
-                    <p class="voice__text u-font--white">昔やっていた音楽活動で、副収入が得られるようになったので、毎日充実するようになりました。</p>
+                    <a href="./result_details.html">
+                        <div class="voice__img-container">
+                            <div class="voice01 voice__img"></div>
+                        </div>
+                        <h2 class="voice__title u-font--white">証券会社勤務　丸山さん</h2>
+                        <p class="voice__text u-font--white">昔やっていた音楽活動で、副収入が得られるようになったので、毎日充実するようになりました。</p>
+                    </a>
                 </div>
                 <div class="voice__item">
-                    <div class="voice02 voice__img"></div>
-                    <h2 class="voice__title u-font--white">IT会社勤務　S.Eさん</h2>
-                    <p class="voice__text u-font--white">プロの指導が受けられるので、技術が確実に上がるし、音楽への考え方とかも勉強できて最高です。</p>
+                    <a href="./result_details.html">
+                        <div class="voice__img-container">
+                            <div class="voice02 voice__img"></div>
+                        </div>
+                        <h2 class="voice__title u-font--white">IT会社勤務　S.Eさん</h2>
+                        <p class="voice__text u-font--white">プロの指導が受けられるので、技術が確実に上がるし、音楽への考え方とかも勉強できて最高です。</p>
+                    </a>
                 </div>
                 <div class="voice__item">
-                    <div class="voice03 voice__img"></div>
-                    <h2 class="voice__title u-font--white">都内大学生　田森さん</h2>
-                    <p class="voice__text u-font--white">就職する前にビジネスの事が学べるし、好きな音楽で稼げるようになったので選択肢が増えました。</p>
+                    <a href="./result_details.html">
+                        <div class="voice__img-container">
+                            <div class="voice03 voice__img"></div>
+                        </div>
+                        <h2 class="voice__title u-font--white">都内大学生　田森さん</h2>
+                        <p class="voice__text u-font--white">就職する前にビジネスの事が学べるし、好きな音楽で稼げるようになったので選択肢が増えました。</p>
+                    </a>
                 </div>
                 <div class="voice__item">
-                    <div class="voice04 voice__img"></div>
-                    <h2 class="voice__title u-font--white">タイトル</h2>
-                    <p class="voice__text u-font--white">テキストテキストテキストテキストテキストテキストテキスト</p>
+                    <a href="./result_details.html">
+                        <div class="voice__img-container">
+                            <div class="voice04 voice__img"></div>
+                        </div>
+                        <h2 class="voice__title u-font--white">タイトル</h2>
+                        <p class="voice__text u-font--white">テキストテキストテキストテキストテキストテキストテキスト</p>
+                    </a>
                 </div>
             </div>
         </div>
@@ -274,16 +290,22 @@
             <h1 class="c-title u-font--white">お知らせ</h1>
             <table class="news__table">
                 <tr>
-                    <td class="news__date u-font--white u-font--bold"><a>2022.01.01&nbsp;&nbsp;&nbsp;&nbsp;</a></td>
-                    <td class="news__text u-font--white u-font--bold"><a>卒業生のケニーさんによるyoutubeサムネイル講座が始まります。</a></td>
+                    <td class="news__date u-font--white u-font--bold"><a
+                            href="./notice_details.html">2022.01.01&nbsp;&nbsp;&nbsp;&nbsp;</a></td>
+                    <td class="news__text u-font--white u-font--bold"><a
+                            href="./notice_details.html">卒業生のケニーさんによるyoutubeサムネイル講座が始まります。</a></td>
                 </tr>
                 <tr>
-                    <td class="news__date u-font--white u-font--bold"><a>2022.01.01&nbsp;&nbsp;&nbsp;&nbsp;</a></td>
-                    <td class="news__text u-font--white u-font--bold"><a>専用アプリから予約できるようになりました。</a></td>
+                    <td class="news__date u-font--white u-font--bold"><a
+                            href="./notice_details.html">2022.01.01&nbsp;&nbsp;&nbsp;&nbsp;</a></td>
+                    <td class="news__text u-font--white u-font--bold"><a
+                            href="./notice_details.html">専用アプリから予約できるようになりました。</a></td>
                 </tr>
                 <tr>
-                    <td class="news__date u-font--white u-font--bold"><a>2022.01.01&nbsp;&nbsp;&nbsp;&nbsp;</a></td>
-                    <td class="news__text u-font--white u-font--bold"><a>あけましておめでとうございます。</a></td>
+                    <td class="news__date u-font--white u-font--bold"><a
+                            href="./notice_details.html">2022.01.01&nbsp;&nbsp;&nbsp;&nbsp;</a></td>
+                    <td class="news__text u-font--white u-font--bold"><a
+                            href="./notice_details.html">あけましておめでとうございます。</a></td>
                 </tr>
                 <tr>
                     <td colspan="2" class="news__forward u-font--white"><a href="./notice_list.html">お知らせ一覧へ</a></td>
@@ -296,7 +318,7 @@
             <h1 class="blog__title">ブログ</h1>
             <div class="blog__contents">
                 <div class="c-card blog__card">
-                    <a href="#">
+                    <a href="./blog_details.html">
                         <div class="c-card__img-container">
                             <div class="c-card__label blog__card__label">SNS</div>
                             <img src="./img/SP/top/blog01.png"
@@ -311,7 +333,7 @@
                     </a>
                 </div>
                 <div class="c-card blog__card">
-                    <a href="#">
+                    <a href="./blog_details.html">
                         <div class="c-card__img-container">
                             <div class="c-card__label blog__card__label">集客方法</div>
                             <img src="./img/SP/top/blog02.png"
@@ -326,7 +348,7 @@
                     </a>
                 </div>
                 <div class="c-card blog__card">
-                    <a href="#">
+                    <a href="./blog_details.html">
                         <div class="c-card__img-container">
                             <div class="c-card__label blog__card__label">ギター</div>
                             <img src="./img/SP/top/blog03.png"
@@ -365,8 +387,10 @@
                     <li><a href="./index.html" class="u-font--white u-font--bold footer__nav__itemlink">ホーム</a></li>
                     <li><a href="./plan.html" class="u-font--white u-font--bold footer__nav__itemlink">料金</a></li>
                     <li><a href="./blog_list.html" class="u-font--white u-font--bold footer__nav__itemlink">ブログ</a></li>
-                    <li><a href="./notice_list.html" class="u-font--white u-font--bold footer__nav__itemlink">お知らせ</a></li>
-                    <li><a href="./result_list.html" class="u-font--white u-font--bold footer__nav__itemlink">卒業実績</a></li>
+                    <li><a href="./notice_list.html" class="u-font--white u-font--bold footer__nav__itemlink">お知らせ</a>
+                    </li>
+                    <li><a href="./result_list.html" class="u-font--white u-font--bold footer__nav__itemlink">卒業実績</a>
+                    </li>
                 </ul>
             </nav>
             <img src="./img/icon/footer-logo.svg" alt="footer-logo" class="footer__logo">
