--- a/MusicSchool/_static/src/result_details.html
+++ b/MusicSchool/_static/src/result_details.html
@@ -65,10 +65,10 @@
         <div class="main-wrapper">
             <ul>
                 <li>
-                    <a href="#">ホーム</a>
+                    <a href="./index.html">ホーム</a>
                 </li>
                 <li>
-                    <a href="#">卒業実績</a>
+                    <a href="./result_list.html">卒業実績</a>
                 </li>
                 <li>
                     <a href="#">ポップス</a>
@@ -144,7 +144,8 @@
                                     </div>
                                     <div class="c-linear-nav__card result-details__linear-nav__card">
                                         <img class="c-linear-nav__item__img pc" src="./img/PC/top/blog03.png"
-                                            srcset="./img/PC/top/blog03.png 1x, ./img/PC/top/blog03@2x.png 2"></img>
+                                            srcset="./img/PC/top/blog03.png 1x, ./img/PC/top/blog03@2x.png 2x"
+                                            alt="前の記事">
                                         <div class="c-linear-nav__item__title">タイトルが入ります。タイトルが入ります。タイトルが入</div>
                                     </div>
                                 </div>
@@ -157,7 +158,8 @@
                                     </div>
                                     <div class="c-linear-nav__card result-details__linear-nav__card">
                                         <img class="c-linear-nav__item__img pc" src="./img/PC/top/blog03.png"
-                                            srcset="./img/PC/top/blog03.png 1x, ./img/PC/top/blog03@2x.png 2"></img>
+                                            srcset="./img/PC/top/blog03.png 1x, ./img/PC/top/blog03@2x.png 2x"
+                                            alt="次の記事">
                                         <div class="c-linear-nav__item__title">タイトルが入ります。タイトルが入ります。タイトルが入</div>
                                     </div>
                                 </div>
@@ -256,10 +258,13 @@
                 <ul>
                     <li><a href="./index.html" class="u-font--white u-font--bold footer__nav__itemlinklink">ホーム</a></li>
                     <li><a href="./plan.html" class="u-font--white u-font--bold footer__nav__itemlinklink">料金</a></li>
-                    <li><a href="./blog_list.html" class="u-font--white u-font--bold footer__nav__itemlinklink">ブログ</a></li>
-                    <li><a href="./notice_list.html" class="u-font--white u-font--bold footer__nav__itemlinklink">お知らせ</a>
+                    <li><a href="./blog_list.html" class="u-font--white u-font--bold footer__nav__itemlinklink">ブログ</a>
                     </li>
-                    <li><a href="./result_list.html" class="u-font--white u-font--bold footer__nav__itemlinklink">卒業実績</a>
+                    <li><a href="./notice_list.html"
+                            class="u-font--white u-font--bold footer__nav__itemlinklink">お知らせ</a>
+                    </li>
+                    <li><a href="./result_list.html"
+                            class="u-font--white u-font--bold footer__nav__itemlinklink">卒業実績</a>
                     </li>
                 </ul>
             </nav>
