--- a/MusicSchool/_static/src/notice_details.html
+++ b/MusicSchool/_static/src/notice_details.html
@@ -65,13 +65,13 @@
         <div class="main-wrapper">
             <ul>
                 <li>
-                    <a href="#">ホーム</a>
+                    <a href="./index.html">ホーム</a>
                 </li>
                 <li>
-                    <a href="#">お知らせ</a>
+                    <a href="./notice_list.html">お知らせ</a>
                 </li>
                 <li>
-                    <a href="#">卒業生のケニーさんによるyoutubeサムネイル講座が始まります。</a>
+                    <a href="./notice_details.html">卒業生のケニーさんによるyoutubeサムネイル講座が始まります。</a>
                 </li>
             </ul>
         </div>
@@ -165,10 +165,13 @@
                 <ul>
                     <li><a href="./index.html" class="u-font--white u-font--bold footer__nav__itemlinklink">ホーム</a></li>
                     <li><a href="./plan.html" class="u-font--white u-font--bold footer__nav__itemlinklink">料金</a></li>
-                    <li><a href="./blog_list.html" class="u-font--white u-font--bold footer__nav__itemlinklink">ブログ</a></li>
-                    <li><a href="./notice_list.html" class="u-font--white u-font--bold footer__nav__itemlinklink">お知らせ</a>
+                    <li><a href="./blog_list.html" class="u-font--white u-font--bold footer__nav__itemlinklink">ブログ</a>
                     </li>
-                    <li><a href="./result_list.html" class="u-font--white u-font--bold footer__nav__itemlinklink">卒業実績</a>
+                    <li><a href="./notice_list.html"
+                            class="u-font--white u-font--bold footer__nav__itemlinklink">お知らせ</a>
+                    </li>
+                    <li><a href="./result_list.html"
+                            class="u-font--white u-font--bold footer__nav__itemlinklink">卒業実績</a>
                     </li>
                 </ul>
             </nav>
