--- a/MusicSchool/_static/src/search.html
+++ b/MusicSchool/_static/src/search.html
@@ -61,15 +61,14 @@
     </div>
     <div class="c-hamburger-bg hamburger-trigger">
     </div>
-    </section>
     <nav class="c-breadcrumb">
         <div class="main-wrapper">
             <ul>
                 <li>
-                    <a href="#">ホーム</a>
+                    <a href="./index.html">ホーム</a>
                 </li>
                 <li>
-                    <a href="#">検索</a>
+                    <a href="./search.html">検索</a>
                 </li>
             </ul>
         </div>
@@ -350,10 +349,13 @@
                 <ul>
                     <li><a href="./index.html" class="u-font--white u-font--bold footer__nav__itemlinklink">ホーム</a></li>
                     <li><a href="./plan.html" class="u-font--white u-font--bold footer__nav__itemlinklink">料金</a></li>
-                    <li><a href="./blog_list.html" class="u-font--white u-font--bold footer__nav__itemlinklink">ブログ</a></li>
-                    <li><a href="./notice_list.html" class="u-font--white u-font--bold footer__nav__itemlinklink">お知らせ</a>
+                    <li><a href="./blog_list.html" class="u-font--white u-font--bold footer__nav__itemlinklink">ブログ</a>
                     </li>
-                    <li><a href="./result_list.html" class="u-font--white u-font--bold footer__nav__itemlinklink">卒業実績</a>
+                    <li><a href="./notice_list.html"
+                            class="u-font--white u-font--bold footer__nav__itemlinklink">お知らせ</a>
+                    </li>
+                    <li><a href="./result_list.html"
+                            class="u-font--white u-font--bold footer__nav__itemlinklink">卒業実績</a>
                     </li>
                 </ul>
             </nav>
