fix pagination active

--- a/MusicSchool/_static/src/blog_list.html
+++ b/MusicSchool/_static/src/blog_list.html
@@ -327,7 +327,7 @@
         <!-- ページネーション -->
         <nav class="c-pagination blog-list__pagination">
             <ul class="c-pagination__inner blog-list__pagination__inner">
-                <li><a href="#" class="c-pagination__link blog-list__pagination__link">1</a></li>
+                <li><a href="#" class="c-pagination__link blog-list__pagination__link active">1</a></li>
                 <li><a href="#" class="c-pagination__link blog-list__pagination__link">2</a></li>
                 <li><a href="#" class="c-pagination__link blog-list__pagination__link">3</a></li>
                 <li class="blog-list__pagination__ellipsis">･･･</li>
