--- a/MusicSchool/_static/src/notice_list.html
+++ b/MusicSchool/_static/src/notice_list.html
@@ -148,7 +148,7 @@
             <!-- ページネーション -->
             <nav class="c-pagination notice-list__pagination">
                 <ul class="c-pagination__inner notice-list__pagination__inner">
-                    <li><a href="#" class="c-pagination__link notice-list__pagination__link actived">1</a></li>
+                    <li><a href="#" class="c-pagination__link notice-list__pagination__link active">1</a></li>
                     <li><a href="#" class="c-pagination__link notice-list__pagination__link">2</a></li>
                     <li><a href="#" class="c-pagination__link notice-list__pagination__link">3</a></li>
                     <li class="notice-list__pagination__ellipsis">･･･</li>
