--- a/MusicSchool/_static/src/search.html
+++ b/MusicSchool/_static/src/search.html
@@ -323,7 +323,7 @@
         <!-- ページネーション -->
         <nav class="c-pagination search-list__pagination">
             <ul class="c-pagination__inner search-list__pagination__inner">
-                <li><a href="#" class="c-pagination__link search-list__pagination__link">1</a></li>
+                <li><a href="#" class="c-pagination__link search-list__pagination__link active">1</a></li>
                 <li><a href="#" class="c-pagination__link search-list__pagination__link">2</a></li>
                 <li><a href="#" class="c-pagination__link search-list__pagination__link">3</a></li>
             </ul>
