--- a/MusicSchool/_static/src/result_list.html
+++ b/MusicSchool/_static/src/result_list.html
@@ -237,7 +237,7 @@
         <!-- ページネーション -->
         <nav class="c-pagination result-list__pagination">
             <ul class="c-pagination__inner result-list__pagination__inner">
-                <li><a href="#" class="c-pagination__link result-list__pagination__link">1</a></li>
+                <li><a href="#" class="c-pagination__link result-list__pagination__link active">1</a></li>
                 <li><a href="#" class="c-pagination__link result-list__pagination__link">2</a></li>
                 <li><a href="#" class="c-pagination__link result-list__pagination__link">3</a></li>
                 <li class="result-list__pagination__ellipsis">･･･</li>
