fix btn display toggle when window resize

--- a/MusicSchool/_static/src/contact_form.html
+++ b/MusicSchool/_static/src/contact_form.html
@@ -137,12 +137,12 @@
         <button class="c-button c-button--red contact-form__button" onclick="location.href='./contact_send.html'">
             送信
         </button>
-        <div class="pc u-pos-fixed u-bottom-0 u-right-0 js-fixed-btn-pc">
+        <div class="u-pos-fixed u-bottom-0 u-right-0 js-fixed-btn-pc">
             <button class="c-button u-mr-100 u-mb-30 u-ml-auto js-go-top">
                 <img src="./img/icon/to-top.svg" alt="トップへ戻る">
             </button>
         </div>
-        <div class="no-pc u-pos-fixed u-right-0 u-bottom-0 js-fixed-btn-no-pc">
+        <div class="u-pos-fixed u-right-0 u-bottom-0 js-fixed-btn-no-pc">
             <button class="c-button u-mr-30 u-mb-20 js-go-top">
                 <img src="./img/icon/to-top.svg" alt="トップへ戻る">
             </button>
