--- a/MusicSchool/_static/src/plan.html
+++ b/MusicSchool/_static/src/plan.html
@@ -189,14 +189,14 @@
         <p class="plan__additional">
             ※各サービスは１回ごとのオプション追加が可能です。詳しくは事務局までお問い合わせください。
         </p>
-        <div class="pc u-pos-fixed u-bottom-0 u-right-0 js-fixed-btn-pc">
+        <div class="u-pos-fixed u-bottom-0 u-right-0 js-fixed-btn-pc">
             <button class="c-button u-mr-100 u-ml-auto js-go-top">
                 <img src="./img/icon/to-top.svg" alt="トップへ戻る">
             </button>
             <button class="c-button--red c-button--mid u-mt-31"
                 onclick="location.href='./contact_form.html'">お問い合わせ</button>
         </div>
-        <div class="no-pc u-pos-fixed u-l-50 u-bottom-0 js-fixed-btn-no-pc">
+        <div class="u-pos-fixed u-l-50 u-bottom-0 js-fixed-btn-no-pc">
             <button class="c-button u-ml-auto js-go-top">
                 <img src="./img/icon/to-top.svg" alt="トップへ戻る">
             </button>
