--- a/MusicSchool/_static/src/notice_list.html
+++ b/MusicSchool/_static/src/notice_list.html
@@ -156,14 +156,14 @@
                 </ul>
             </nav>
         </div>
-        <div class="pc u-pos-fixed u-bottom-0 u-right-0 js-fixed-btn-pc">
+        <div class="u-pos-fixed u-bottom-0 u-right-0 js-fixed-btn-pc">
             <button class="c-button u-mr-100 u-ml-auto js-go-top">
                 <img src="./img/icon/to-top.svg" alt="トップへ戻る">
             </button>
             <button class="c-button--red c-button--mid u-mt-30"
                 onclick="location.href='./contact_form.html'">お問い合わせ</button>
         </div>
-        <div class="no-pc u-pos-fixed u-l-50 u-bottom-0 js-fixed-btn-no-pc">
+        <div class="u-pos-fixed u-l-50 u-bottom-0 js-fixed-btn-no-pc">
             <button class="c-button u-ml-auto js-go-top">
                 <img src="./img/icon/to-top.svg" alt="トップへ戻る">
             </button>
