fix footer linkitem

--- a/MusicSchool/_static/src/contact_form.html
+++ b/MusicSchool/_static/src/contact_form.html
@@ -152,15 +152,13 @@
         <div class="main-wrapper footer-wrapper">
             <nav class="footer__nav">
                 <ul>
-                    <li><a href="./index.html" class="u-font--white u-font--bold footer__nav__itemlinklink">ホーム</a></li>
-                    <li><a href="./plan.html" class="u-font--white u-font--bold footer__nav__itemlinklink">料金</a></li>
-                    <li><a href="./blog_list.html" class="u-font--white u-font--bold footer__nav__itemlinklink">ブログ</a>
+                    <li><a href="./index.html" class="u-font--white u-font--bold footer__nav__itemlink">ホーム</a></li>
+                    <li><a href="./plan.html" class="u-font--white u-font--bold footer__nav__itemlink">料金</a></li>
+                    <li><a href="./blog_list.html" class="u-font--white u-font--bold footer__nav__itemlink">ブログ</a>
                     </li>
-                    <li><a href="./notice_list.html"
-                            class="u-font--white u-font--bold footer__nav__itemlinklink">お知らせ</a>
+                    <li><a href="./notice_list.html" class="u-font--white u-font--bold footer__nav__itemlink">お知らせ</a>
                     </li>
-                    <li><a href="./result_list.html"
-                            class="u-font--white u-font--bold footer__nav__itemlinklink">卒業実績</a>
+                    <li><a href="./result_list.html" class="u-font--white u-font--bold footer__nav__itemlink">卒業実績</a>
                     </li>
                 </ul>
             </nav>
