--- a/MusicSchool/_static/src/search.html
+++ b/MusicSchool/_static/src/search.html
@@ -104,7 +104,7 @@
                 </a>
             </div>
             <div class="c-card search-list__card">
-                <a href="#">
+                <a href="./blog_details.html">
                     <div class="search-list__item">
                         <div class="search-list__item--left">
                             <div class="c-card__img-container">
@@ -128,7 +128,7 @@
                 </a>
             </div>
             <div class="c-card search-list__card">
-                <a href="#">
+                <a href="./blog_details.html">
                     <div class="search-list__item">
                         <div class="search-list__item--left">
                             <div class="c-card__img-container">
@@ -152,7 +152,7 @@
                 </a>
             </div>
             <div class="c-card search-list__card">
-                <a href="#">
+                <a href="./blog_details.html">
                     <div class="search-list__item">
                         <div class="search-list__item--left">
                             <div class="c-card__img-container">
@@ -176,7 +176,7 @@
                 </a>
             </div>
             <div class="c-card search-list__card">
-                <a href="#">
+                <a href="./blog_details.html">
                     <div class="search-list__item">
                         <div class="search-list__item--left">
                             <div class="c-card__img-container">
@@ -200,7 +200,7 @@
                 </a>
             </div>
             <div class="c-card search-list__card">
-                <a href="#">
+                <a href="./blog_details.html">
                     <div class="search-list__item">
                         <div class="search-list__item--left">
                             <div class="c-card__img-container">
@@ -224,7 +224,7 @@
                 </a>
             </div>
             <div class="c-card search-list__card">
-                <a href="#">
+                <a href="./blog_details.html">
                     <div class="search-list__item">
                         <div class="search-list__item--left">
                             <div class="c-card__img-container">
@@ -248,7 +248,7 @@
                 </a>
             </div>
             <div class="c-card search-list__card">
-                <a href="#">
+                <a href="./blog_details.html">
                     <div class="search-list__item">
                         <div class="search-list__item--left">
                             <div class="c-card__img-container">
@@ -272,7 +272,7 @@
                 </a>
             </div>
             <div class="c-card search-list__card">
-                <a href="#">
+                <a href="./blog_details.html">
                     <div class="search-list__item">
                         <div class="search-list__item--left">
                             <div class="c-card__img-container">
@@ -297,7 +297,7 @@
             </div>
         </div>
         <div class="c-card search-list__card">
-            <a href="#">
+            <a href="./blog_details.html">
                 <div class="search-list__item">
                     <div class="search-list__item--left">
                         <div class="c-card__img-container">
