fix mediate layout blog_details

--- a/MusicSchool/_static/src/blog_details.html
+++ b/MusicSchool/_static/src/blog_details.html
@@ -262,7 +262,7 @@
                     </div>
                 </section>
             </div>
-            <div class="blog-deetail__right">
+            <div class="blog-detail__right">
                 <!-- 無料メールマガジン -->
                 <section id="blog-detail__ad">
                     <h2 class="c-section__title">
