fix blog_details mediate layout, blog_list link

--- a/MusicSchool/_static/src/blog_list.html
+++ b/MusicSchool/_static/src/blog_list.html
@@ -108,7 +108,7 @@
                 </a>
             </div>
             <div class="c-card blog-list__card">
-                <a href="#">
+                <a href="./blog_details.html">
                     <div class="blog-list__item">
                         <div class="blog-list__item--left">
                             <div class="c-card__img-container">
@@ -132,7 +132,7 @@
                 </a>
             </div>
             <div class="c-card blog-list__card">
-                <a href="#">
+                <a href="./blog_details.html">
                     <div class="blog-list__item">
                         <div class="blog-list__item--left">
                             <div class="c-card__img-container">
@@ -156,7 +156,7 @@
                 </a>
             </div>
             <div class="c-card blog-list__card">
-                <a href="#">
+                <a href="./blog_details.html">
                     <div class="blog-list__item">
                         <div class="blog-list__item--left">
                             <div class="c-card__img-container">
@@ -180,7 +180,7 @@
                 </a>
             </div>
             <div class="c-card blog-list__card">
-                <a href="#">
+                <a href="./blog_details.html">
                     <div class="blog-list__item">
                         <div class="blog-list__item--left">
                             <div class="c-card__img-container">
@@ -204,7 +204,7 @@
                 </a>
             </div>
             <div class="c-card blog-list__card">
-                <a href="#">
+                <a href="./blog_details.html">
                     <div class="blog-list__item">
                         <div class="blog-list__item--left">
                             <div class="c-card__img-container">
@@ -228,7 +228,7 @@
                 </a>
             </div>
             <div class="c-card blog-list__card">
-                <a href="#">
+                <a href="./blog_details.html">
                     <div class="blog-list__item">
                         <div class="blog-list__item--left">
                             <div class="c-card__img-container">
@@ -252,7 +252,7 @@
                 </a>
             </div>
             <div class="c-card blog-list__card">
-                <a href="#">
+                <a href="./blog_details.html">
                     <div class="blog-list__item">
                         <div class="blog-list__item--left">
                             <div class="c-card__img-container">
@@ -276,7 +276,7 @@
                 </a>
             </div>
             <div class="c-card blog-list__card">
-                <a href="#">
+                <a href="./blog_details.html">
                     <div class="blog-list__item">
                         <div class="blog-list__item--left">
                             <div class="c-card__img-container">
@@ -301,7 +301,7 @@
             </div>
         </div>
         <div class="c-card blog-list__card">
-            <a href="#">
+            <a href="./blog_details.html">
                 <div class="blog-list__item">
                     <div class="blog-list__item--left">
                         <div class="c-card__img-container">
