fix accordion, button focus

--- a/MusicSchool/_static/src/index.html
+++ b/MusicSchool/_static/src/index.html
@@ -250,7 +250,7 @@
             <div class="accordion__collapse u-font--red u-font--bold">
                 <div class="accordion__collapse__inner accordion__flex">
                     <img src="./img/icon/answer.svg" alt="answer-icon" class="accordion__answer-icon">
-                    <p class="accordion__item__text">個人差はありますが、早ければ３ヶ月ほどで稼げる生徒さんもいらっしゃいます。</p>
+                    <p class="accordion__item__text">音楽好きな方が約半年で平均月15万円稼げるようになっています。</p>
                 </div>
             </div>
             <div class="accordion__item c-accordion-toggle js-accordion-toggle accordion__flex">
@@ -270,7 +270,7 @@
             <div class="accordion__collapse u-font--red u-font--bold">
                 <div class="accordion__collapse__inner accordion__flex">
                     <img src="./img/icon/answer.svg" alt="answer-icon" class="accordion__answer-icon">
-                    <p class="accordion__item__text">分割払いも可能です。</p>
+                    <p class="accordion__item__text">入学金はクレジットカードのみ分割払い可能です。</p>
                 </div>
             </div>
             <div class="accordion__item c-accordion-toggle js-accordion-toggle accordion__flex">
@@ -280,7 +280,7 @@
             <div class="accordion__collapse u-font--red u-font--bold">
                 <div class="accordion__collapse__inner accordion__flex">
                     <img src="./img/icon/answer.svg" alt="answer-icon" class="accordion__answer-icon">
-                    <p class="accordion__item__text">休学も可能です。</p>
+                    <p class="accordion__item__text">休学理由によりますが、基本的に休学することは可能です。</p>
                 </div>
             </div>
         </div>
